--- a/traefik.yml
+++ b/traefik.yml
@@ -20,3 +20,12 @@ providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
+
+certificatesResolvers:
+  myresolver:
+    acme:
+      email: tech@talentpulse.nl
+      storage: "acme.json"
+      httpChallenge:
+        # used during the challenge
+        entryPoint: web
